--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,22 @@
 .flex-container {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  /* this selector selects all divs inside of .flex-container */
+  display: flex;
+}
+
 .flex-container div {
-    background: peachpuff;
-    border: 4px solid brown;
-    flex: 1;
+  flex: 1;
+  background: #1F2937;
+  border: 1px solid black;
+}
+
+.hero-text {
+  font-size: 48px;
+  color: #F9FAF8;
+}
+.hero-s {
+  font-size: 18px;
+  color: #E5E7EB;
+}
+.header-logo {
+  font-size: 24px;
+  color: #F9FAF8;
 }
