--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,29 @@
-.flex-container {
+* {
+  border: 1px solid gray;
+  margin: 0;
+}
+
+nav {
   display: flex;
+  margin: auto;
+  width: 80%;
+  padding: 20px 0px;
+  justify-content: space-between;
 }
 
-.flex-container div {
-  flex: 1;
-  background: #1F2937;
-  border: 1px solid black;
+.dark-bg {
+  background-color: #1F2937;
 }
-
-.hero-text {
-  font-size: 48px;
+.hero {
+  font-size: 24px;
   color: #F9FAF8;
 }
-.hero-s {
+.hero-sub {
   font-size: 18px;
   color: #E5E7EB;
 }
-.header-logo {
-  font-size: 24px;
-  color: #F9FAF8;
+.nav-link {
+  display: flex;
+  width: 50%;
+  justify-content: space-around;
 }
