--- a/styles.css
+++ b/styles.css
@@ -50,13 +50,26 @@ nav {
 
 .content {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
 }
 .info-header {
   font-size: 36px;
   font-weight: bolder;
   color: #1F2937;
+  padding: 50px 0;
+}
+.content-pictures {
+  display: flex;
+  flex-direction: row;
+  width: 70%;
+  justify-content: space-around;
+}
+.content-pictures p {
+  inline-size: 200px;
+  overflow-wrap: break-word;
+  padding: 10px 0;
 }
 
 .signup-btn {
