--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,9 @@ nav {
 .white-bg {
   background-color: white;
 }
+.gray-bg {
+  background-color: #E5E7EB;
+}
 
 .hero {
   font-size: 24px;
@@ -70,6 +73,20 @@ nav {
   inline-size: 200px;
   overflow-wrap: break-word;
   padding: 10px 0;
+}
+
+.quote {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+.quote-text {
+  width: 50%;
+  font-size: 36px;
+  font-weight: lighter;
+  font-style: italic;
+  color: #1F2937;
 }
 
 .signup-btn {
