--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ nav {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  padding: 70px 0;
 }
 .info-header {
   font-size: 36px;
@@ -80,12 +81,19 @@ nav {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  padding: 70px 0;
 }
 .quote-text {
-  width: 50%;
+  width: 40%;
   font-size: 36px;
   font-weight: lighter;
   font-style: italic;
+  color: #1F2937;
+}
+.quote-credit {
+  padding-left: 20%;
+  font-size: 36px;
+  font-weight: bold;
   color: #1F2937;
 }
 
