--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,9 @@
 nav {
   display: flex;
   margin: auto;
-  width: 80%;
+  width: 100%;
   padding: 20px 0px;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .nav-link {
   display: flex;
@@ -40,8 +40,8 @@ nav {
   display: flex;
   margin: auto;
   padding: 50px 0px;
-  width: 80%;
-  justify-content: space-between;
+  width: 100%;
+  justify-content: space-around;
   align-items: center;
 }
 .main-div {
@@ -121,4 +121,10 @@ nav {
 }
 .cta .signup-btn {
   border: 1px solid #F9FAF8;
+}
+
+.footer {
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
